Updating links for changed pages across versions
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/cluster-deployment/configuration/rke2.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/configuration/rke2.adoc
@@ -1,5 +1,5 @@
 = {rke2-product-name} Cluster Configuration Reference
-:revdate: 2025-03-04
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 This section covers the configuration options that are available in Rancher for a new or existing RKE2 Kubernetes cluster.
@@ -141,9 +141,9 @@ The default xref:security/psp/create.adoc[pod security policy] for the cluster. 
 
 The default xref:security/psact.adoc[pod security admission configuration template] for the cluster.
 
-===== Worker CIS Profile
+===== Worker Compliance Profile
 
-Select a xref:security/cis-scans/how-to.adoc[CIS benchmark] to validate the system configuration against.
+Select a xref:security/compliance-scans/how-to.adoc[compliance benchmark] to validate the system configuration against.
 
 ===== Project Network Isolation
 
