--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/best-practices.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/best-practices.adoc
@@ -1,5 +1,5 @@
 = Monitoring Best Practices
-:revdate: 2025-04-09
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 Configuring sensible monitoring and alerting rules is vital for running any production workloads securely and reliably. This is not different when using Kubernetes and Rancher. Fortunately the integrated monitoring and alerting functionality makes this whole process a lot easier.
@@ -94,7 +94,7 @@ Monitoring the availability and performance of all your internal workloads is vi
 
 == Security Monitoring
 
-In addition to monitoring workloads to detect performance, availability or scalability problems, the cluster and the workloads running into it should also be monitored for potential security problems. A good starting point is to frequently run and alert on xref:security/cis-scans/how-to.adoc[CIS Scans] which check if the cluster is configured according to security best practices.
+In addition to monitoring workloads to detect performance, availability or scalability problems, the cluster and the workloads running into it should also be monitored for potential security problems. A good starting point is to frequently run and alert on xref:security/compliance-scans/how-to.adoc[Compliance Scans] which check if the cluster is configured according to security best practices.
 
 For the workloads, you can have a look at Kubernetes and Container security solutions like https://www.suse.com/products/neuvector/[NeuVector], https://falco.org/[Falco], https://www.aquasec.com/solutions/kubernetes-container-security/[Aqua Kubernetes Security], https://sysdig.com/[SysDig].
 
