--- a/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
+++ b/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
@@ -1,5 +1,5 @@
 = 接收器配置
-:revdate: 2025-03-17
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 https://prometheus.io/docs/alerting/latest/configuration/#configuration-file[Alertmanager Config] Secret 包含 Alertmanager 实例的配置，该实例根据 Prometheus 发出的告警发送通知。
@@ -338,30 +338,30 @@ receivers:
   - service_key: 'database-integration-key'
 ----
 
-== CIS 扫描告警的示例路由配置
+== Compliance 扫描告警的示例路由配置
 
-在为 `rancher-cis-benchmark` 告警配置路由时，你可以使用键值对 `job:rancher-cis-scan` 来指定匹配。
+在为 `rancher-compliance` 告警配置路由时，你可以使用键值对 `job:rancher-compliance-scan` 来指定匹配。
 
-例如，以下路由配置示例可以与名为 `test-cis` 的 Slack 接收器一起使用：
+例如，以下路由配置示例可以与名为 `test-compliance` 的 Slack 接收器一起使用：
 
 [,yaml]
 ----
 spec:
-  receiver: test-cis
+  receiver: test-compliance
   group_by:
 #    - string
   group_wait: 30s
   group_interval: 30s
   repeat_interval: 30s
   match:
-    job: rancher-cis-scan
+    job: rancher-compliance-scan
 #    key: string
   match_re:
     {}
 #    key: string
 ----
 
-有关为 `rancher-cis-benchmark` 启用告警的更多信息，请参阅xref:security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc[本节]。
+有关为 `rancher-compliance` 启用告警的更多信息，请参阅xref:security/compliance-scans/enable-alerting-for-rancher-compliance.adoc[本节]。
 
 == Notifiers 的可信 CA
 
