--- a/versions/v2.12/modules/en/pages/observability/rancher-cluster-tools.adoc
+++ b/versions/v2.12/modules/en/pages/observability/rancher-cluster-tools.adoc
@@ -38,8 +38,8 @@ Rancher's integration with Istio was improved in Rancher v2.5.
 
 For more information, refer to the Istio documentation xref:observability/istio/istio.adoc[here.]
 
-== CIS Scans
+== Compliance Scans
 
-Rancher can run a security scan to check whether Kubernetes is deployed according to security best practices as defined in the CIS Kubernetes Benchmark.
+Rancher can run a security scan to check whether Kubernetes is deployed according to security best practices as defined in most recognized Kubernetes Security Benchmarks, such as STIG.
 
-For more information, refer to the CIS scan documentation xref:security/cis-scans/how-to.adoc[here.]
+For more information, refer to the Compliance scan documentation xref:security/compliance-scans/how-to.adoc[here.]
