--- a/versions/v2.12/modules/zh/pages/cluster-deployment/configuration/rke2.adoc
+++ b/versions/v2.12/modules/zh/pages/cluster-deployment/configuration/rke2.adoc
@@ -1,5 +1,5 @@
 = {rke2-product-name} 集群配置参考
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 本文介绍 Rancher 中可用于新的或现有的 RKE2 Kubernetes 集群的配置选项。
@@ -132,9 +132,9 @@ Rancher 与以下开箱即用的网络提供商兼容：
 
 为集群选择默认的 xref:security/psp/create.adoc[pod 安全策略]。请参阅 https://documentation.suse.com/cloudnative/rke2/latest/zh/security/pod_security_policies.html[RKE2 文档]来了解每个可用策略的规范。
 
-==== Worker CIS 配置文件
+==== Worker Compliance 配置文件
 
-选择一个 xref:security/cis-scans/how-to.adoc[CIS benchmark] 来验证系统配置。
+选择一个 xref:security/compliance-scans/how-to.adoc[compliance benchmark] 来验证系统配置。
 
 ==== 项目网络隔离
 
