--- a/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/best-practices.adoc
+++ b/versions/latest/modules/zh/pages/observability/monitoring-and-dashboards/best-practices.adoc
@@ -1,5 +1,5 @@
 = 监控最佳实践
-:revdate: 2025-04-09
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 配置合理的监控和告警规则对于安全、可靠地运行生产环境中的工作负载至关重要。在使用 Kubernetes 和 Rancher 时也是如此。幸运的是，你可以使用集成的监控和告警功能来简化整个过程。
@@ -94,7 +94,7 @@ Prometheus 不是用于长期存储指标的，它只用于短期存储。
 
 == 安全监控
 
-除了通过监控工作负载来检测性能、可用性或可扩展性之外，你还应该监控集群和运行在集群中的工作负载，来发现潜在的安全问题。一个好的做法是经常运行 xref:security/cis-scans/how-to.adoc[CIS 扫描]并发出告警，来检查集群是否按照安全最佳实践进行配置。
+除了通过监控工作负载来检测性能、可用性或可扩展性之外，你还应该监控集群和运行在集群中的工作负载，来发现潜在的安全问题。A good starting point is to frequently run and alert on xref:security/compliance-scans/how-to.adoc[Compliance Scans] which check if the cluster is configured according to security best practices.
 
 对于工作负载，你可以查看 Kubernetes 和 Container 安全解决方案，例如 https://www.suse.com/products/neuvector/[NeuVector]、https://falco.org/[Falco]、https://www.aquasec.com/solutions/kubernetes-container-security/[Aqua Kubernetes Security] 和 https://sysdig.com/[SysDig]。
 
