--- a/versions/v2.12/modules/en/pages/security/security-overview.adoc
+++ b/versions/v2.12/modules/en/pages/security/security-overview.adoc
@@ -28,21 +28,13 @@ On this page, we provide security related documentation along with resources to 
 
 NeuVector is an open-source, container-focused security application that is now integrated into Rancher. NeuVector provides production security, DevOps vulnerability protection, and a container firewall, et al. Please see the xref:integrations/neuvector/neuvector.adoc[Rancher docs] and the https://documentation.suse.com/cloudnative/security/{neuvector-docs-version}/en/overview.html[{neuvector-product-name} docs] for more information.
 
-== Running a CIS Security Scan on a Kubernetes Cluster
+== Running a Compliance Security Scan on a Kubernetes Cluster
 
-Rancher leverages https://github.com/aquasecurity/kube-bench[kube-bench] to run a security scan to check whether Kubernetes is deployed according to security best practices as defined in the https://www.cisecurity.org/cis-benchmarks/[CIS] (Center for Internet Security) Kubernetes Benchmark.
+Rancher leverages https://github.com/aquasecurity/kube-bench[kube-bench] to run a security scan to check whether Kubernetes is deployed according to security best practices.
 
-The CIS Kubernetes Benchmark is a reference document that can be used to establish a secure configuration baseline for Kubernetes.
+When Rancher runs a Compliance scan on a cluster, it generates a report showing the results of each test, including a summary with the number of passed, skipped and failed tests. The report also includes remediation steps for any failed tests.
 
-The Center for Internet Security (CIS) is a 501(c)(3) non-profit organization, formed in October 2000, with a mission to "identify, develop, validate, promote, and sustain best practice solutions for cyber defense and build and lead communities to enable an environment of trust in cyberspace".
-
-CIS Benchmarks are best practices for the secure configuration of a target system. CIS Benchmarks are developed through the generous volunteer efforts of subject matter experts, technology vendors, public and private community members, and the CIS Benchmark Development team.
-
-The Benchmark provides recommendations of two types: Automated and Manual. We run tests related to only Automated recommendations.
-
-When Rancher runs a CIS security scan on a cluster, it generates a report showing the results of each test, including a summary with the number of passed, skipped and failed tests. The report also includes remediation steps for any failed tests.
-
-For details, refer to the section on xref:security/cis-scans/how-to.adoc[security scans].
+For details, refer to the section on xref:security/compliance-scans/how-to.adoc[security scans].
 
 == SELinux RPM
 
