--- a/versions/v2.12/modules/zh/pages/observability/rancher-cluster-tools.adoc
+++ b/versions/v2.12/modules/zh/pages/observability/rancher-cluster-tools.adoc
@@ -1,5 +1,5 @@
 = 集群工具：Logging，Monitoring 和可视化
-:revdate: 2025-08-05
+:revdate: 2025-08-18
 :page-revdate: {revdate}
 
 Rancher 包含 Kubernetes 中未包含的各种工具来协助你进行 DevOps 操作。Rancher 可以与外部服务集成，让你的集群更高效地运行。工具分为以下几类：
@@ -38,8 +38,8 @@ Rancher v2.5 改进了与 Istio 的集成。
 
 如需更多信息，请参阅 xref:observability/istio/istio.adoc[Istio 文档]。
 
-== CIS 扫描
+== Compliance 扫描
 
-Rancher 可以通过运行安全扫描来检查 Kubernetes 是否按照 CIS Kubernetes Benchmark 中定义的安全最佳实践进行部署。
+Rancher can run a security scan to check whether Kubernetes is deployed according to security best practices as defined in most recognized Kubernetes Security Benchmarks, such as STIG.
 
-如需更多信息，请参阅 xref:security/cis-scans/how-to.adoc[CIS 扫描文档]。
+如需更多信息，请参阅 xref:security/compliance-scans/how-to.adoc[Compliance 扫描文档]。
