--- a/versions/latest/modules/zh/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/zh/pages/rancher-admin/scc-registration.adoc
@@ -50,8 +50,13 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 
 ==== Rancher UI
 
+[IMPORTANT]
+====
+An SCC Organization Admin must get your registration certificate, as regular users do not have access.
+====
+
 . From the Rancher UI, click *Download registration request* to download the registration request file.
-. Click *Visit SCC* to use the SCC offline registration tool. 
+. Click *Visit SCC* to use the SCC offline registration tool and get the registration certificate. 
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
