Syncing zh versions community pr #1867
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/zh/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
+++ b/versions/latest/modules/zh/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
@@ -1,5 +1,5 @@
 = 为定时扫描配置告警
-:revdate: 2024-09-25
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 :experimental:
 
@@ -9,7 +9,7 @@
 
 只有定时运行的扫描才支持告警。
 
-CIS Benchmark 应用支持两种类型的告警：
+Compliance 应用支持两种类型的告警：
 
 * 扫描完成告警：此告警在扫描运行完成时发出。告警包括详细信息，包括 ClusterScan 的名称和 ClusterScanProfile 的名称。
 * 扫描失败告警：如果扫描中有一些测试失败或扫描处于 `Fail` 状态，则会发出此告警。
@@ -18,20 +18,20 @@ CIS Benchmark 应用支持两种类型的告警：
 .先决条件：
 ====
 
-为 `rancher-cis-benchmark` 启用告警之前，确保安装了 `rancher-monitoring` 应用并配置了接收器（Receiver）和路由（Route）。详情请参见xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[本章节]。
+为 `rancher-compliance` 启用告警之前，确保安装了 `rancher-monitoring` 应用并配置了接收器（Receiver）和路由（Route）。详情请参见xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[本章节]。
 
-在为 `rancher-cis-benchmark` 告警配置路由时，你可以使用键值对 `job:rancher-cis-scan` 来指定匹配。详情请查看xref:observability/monitoring-and-dashboards/configuration/receivers.adoc#_cis_扫描告警的示例路由配置[路由配置示例]。
+在为 `rancher-compliance` 告警配置路由时，你可以使用键值对 `job:rancher-compliance-scan` 来指定匹配。详情请查看xref:observability/monitoring-and-dashboards/configuration/receivers.adoc#_cis_扫描告警的示例路由配置[路由配置示例]。
 ====
 
 
 要为定时运行的扫描配置告警：
 
-. 请在 `rancher-cis-benchmark` 应用程序上启用告警。详情请参见xref:security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc[本页]。
+. 请在 `rancher-compliance` 应用程序上启用告警。详情请参见xref:security/compliance-scans/enable-alerting-for-rancher-compliance.adoc[本页]。
 . 在左上角，单击 *☰ > 集群管理*。
-. 在**集群**页面上，转到要运行 CIS 扫描的集群，然后单击 *Explore*。
-. 点击 menu:CIS Benchmark[扫描]。
+. 在**集群**页面上，转到要运行 compliance 扫描的集群，然后单击 *Explore*。
+. 点击 *compliance > Scan*。
 . 单击**创建**。
-. 选择集群扫描配置文件。该配置文件确定要使用哪个 CIS Benchmark 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 CIS Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
+. 选择集群扫描配置文件。该配置文件确定要使用哪个 compliance 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
 . 选择**定时运行扫描**的选项。
 . 在**调度**字段中输入有效的 https://en.wikipedia.org/wiki/Cron#CRON_expression[Cron 表达式]。
 . 选中**告警**下告警类型旁边的框。
