--- a/versions/latest/modules/zh/pages/security/compliance-scans/custom-benchmark.adoc
+++ b/versions/latest/modules/zh/pages/security/compliance-scans/custom-benchmark.adoc
@@ -1,18 +1,22 @@
 = 为集群扫描创建自定义 Benchmark 版本
-:revdate: 2024-09-25
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 :experimental:
 
-每个 Benchmark 版本都定义了一组测试配置文件，这些文件定义了由 https://github.com/aquasecurity/kube-bench[kube-bench] 工具运行的 CIS 测试。
-`rancher-cis-benchmark` 应用安装了一些默认的 Benchmark 测试版本，这些版本列在了 CIS Benchmark 测试应用菜单下。
+每个 Benchmark 版本都定义了一组测试配置文件，这些文件定义了由 https://github.com/aquasecurity/kube-bench[kube-bench] 工具运行的 Compliance 测试。
+`rancher-compliance` 应用安装了一些默认的 Benchmark 测试版本，这些版本列在了 Compliance 测试应用菜单下。
 
 但是，某些 Kubernetes 集群可能需要自定义配置 Benchmark 测试。例如，Kubernetes 配置文件或证书的路径可能与上游 CIS Benchmark 的标准位置不同。
 
-现在，你可以使用 `rancher-cis-benchmark` 应用来创建自定义 Benchmark 版本，从而运行集群扫描。
+现在，你可以使用 `rancher-compliance` 应用来创建自定义 compliance 版本，从而运行集群扫描。
 
-运行集群扫描时，你需要选择指向特定 Benchmark 版本的配置文件。
+But in the following cases, a custom configuration or remediation may be required:
 
-按照以下所有步骤添加自定义 Benchmark 版本并使用它运行扫描。
+- Non-standard file locations: When Kubernetes binaries, configuration or certificate paths deviate from upstream benchmark defaults.
+Example: Unlike traditional Kubernetes, K3s bundles control plane components into a single binary. Therefore,` --anonymous-auth` flag presence and configuration should be verified in K3s' logs (`journalctl`), not via `kube-apiserver` process checks (`ps`).
+
+- Alternative risk mitigations: If a setup doesn't meet a check but has an equally effective compensating control with justification. Or simply is not concerned by the check requirement because of its design.
+Example: By default, K3s embeds the api server within the k3s process. There is no API server pod specification file, so verifying the latter's file permissions is not required.
 
 == 1. 准备自定义 Benchmark 版本 ConfigMap
 
@@ -46,7 +50,7 @@ kubectl create configmap -n <namespace> foo --from-file=<path to directory foo>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要添加自定义 Benchmark 的集群，然后单击 *Explore*。
-. 在左侧导航栏中，单击 menu:CIS Benchmark[Benchmark 版本]。
+. 在左侧导航栏中，单击 *Compliance > Profile*。
 . 单击**创建**。
 . 输入自定义 Benchmark 版本的**名称**和描述。
 . 选择要应用 Benchmark 版本的集群提供商。
@@ -60,7 +64,7 @@ kubectl create configmap -n <namespace> foo --from-file=<path to directory foo>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要添加自定义 Benchmark 的集群，然后单击 *Explore*。
-. 在左侧导航栏中，单击 menu:CIS Benchmark[配置文件]。
+. 在左侧导航栏中，单击 *Compliance > Profile*。
 . 单击**创建**。
 . 设置**名称**和描述。在本例中，我们将其命名为 `foo-profile`。
 . 在下拉列表中选择 Benchmark 版本。
@@ -74,7 +78,7 @@ kubectl create configmap -n <namespace> foo --from-file=<path to directory foo>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要添加自定义 Benchmark 的集群，然后单击 *Explore*。
-. 在左侧导航栏中，单击 menu:CIS Benchmark[扫描]。
+. 在左侧导航栏中，单击 *Compliance > Profile*。
 . 单击**创建**。
 . 选择新的集群扫描配置文件。
 . 单击**创建**。
