--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/compliance-scans.adoc
@@ -1,10 +1,10 @@
-= CIS 扫描
-:revdate: 2025-08-05
+= Compliance 扫描
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-Rancher 可以通过运行安全扫描来检查 Kubernetes 是否按照 CIS Kubernetes Benchmark 中定义的安全最佳实践进行部署。CIS 扫描可以运行在任何 Kubernetes 集群，包括托管的 Kubernetes，例如 EKS、AKS 和 GKE。
+Rancher can run a security scan to check whether a cluster is deployed according to security best practices as defined in Kubernetes security benchmarks, such as the ones provided by STIG, BSI or CIS. The Compliance scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS, AKS, and GKE.
 
-`rancher-cis-benchmark` 应用使用了 https://github.com/aquasecurity/kube-bench[kube-bench,] ，这是 Aqua Security 的开源工具，用于检查集群是否符合 CIS Kubernetes Benchmark。此外，为了生成集群级别的报告，此应用使用了 https://github.com/vmware-tanzu/sonobuoy[Sonobuoy] 来聚合报告。
+The `rancher-compliance` app leverages https://github.com/aquasecurity/kube-bench[kube-bench,] an open-source tool from Aqua Security, to check the compliance of clusters against Kubernetes Benchmarks。此外，为了生成集群级别的报告，此应用使用了 https://github.com/vmware-tanzu/sonobuoy[Sonobuoy] 来聚合报告。
 
 == 关于 CIS Benchmark
 
@@ -114,7 +114,7 @@ EKS 和 GKE 集群扫描的配置文件基于这些集群类型特定的 CIS Ben
 
 默认配置文件和支持的 CIS Benchmark 版本取决于扫描的集群类型：
 
-`rancher-cis-benchmark` 支持 CIS 1.6 Benchmark 版本。
+`rancher-compliance` 支持 CIS 1.6 Benchmark 版本。
 
 * RKE Kubernetes 集群默认使用 RKE Permissive 1.6 配置文件。
 * EKS 和 GKE 有自己的 CIS Benchmark，由 `kube-bench` 发布。这些集群默认使用相应的测试配置文件。
@@ -123,20 +123,18 @@ EKS 和 GKE 集群扫描的配置文件基于这些集群类型特定的 CIS Ben
 
 == 跳过和不适用的测试
 
-有关要跳过和不适用的测试列表，请参阅xref:security/cis-scans/skip-tests.adoc[此页面]。
-
 目前，只有用户定义的跳过测试会在生成报告中标记为跳过。
 
 如果某个默认配置文件将某个测试定义为跳过，则该测试也会标记为不适用。
 
 == RBAC
 
-有关权限的详细信息，请参阅xref:security/cis-scans/rbac-for-cis-scans.adoc[此页面]。
+有关权限的详细信息，请参阅xref:security/compliance-scans/rbac-for-compliance-scans.adoc[此页面]。
 
 == 配置
 
-有关为扫描、配置文件和 Benchmark 版本配置自定义资源的更多信息，请参阅xref:security/cis-scans/configuration-reference.adoc[此页面]。
+有关为扫描、配置文件和 Benchmark 版本配置自定义资源的更多信息，请参阅xref:security/compliance-scans/configuration-reference.adoc[此页面]。
 
 == 操作指南
 
-要了解如何运行 CIS 扫描，请参阅 xref:security/cis-scans/how-to.adoc[CIS 扫描指南]。
+要了解如何运行 compliance 扫描，请参阅 xref:security/compliance-scans/how-to.adoc[Compliance 扫描指南]。
