--- a/versions/latest/modules/zh/pages/security/compliance-scans/uninstall-rancher-compliance.adoc
+++ b/versions/latest/modules/zh/pages/security/compliance-scans/uninstall-rancher-compliance.adoc
@@ -1,10 +1,10 @@
-= 卸载 {rancher-product-name} CIS Benchmark
-:revdate: 2024-09-27
+= 卸载 {rancher-product-name} Compliance
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 :experimental:
 
-. 在**集群**仪表板中，单击左侧导航的 menu:Apps[Installed Apps]。
-. 前往 `cis-operator-system` 命名空间，并选中 `rancher-cis-benchmark-crd` 和 `rancher-cis-benchmark` 旁边的框。
+. 在**集群**仪表板中，单击左侧导航的 *Apps > Installed Apps*。
+. 前往 `compliance-operator-system` 命名空间，并选中 `rancher-compliance-crd` 和 `rancher-compliance` 旁边的框。
 . 单击**删除**并确认**删除**。
 
-*结果*：已卸载 `rancher-cis-benchmark` 应用。
+*结果*：已卸载 `rancher-compliance` 应用。
