--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/configuration-reference.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/configuration-reference.adoc
@@ -1,18 +1,18 @@
 = 配置
-:revdate: 2025-08-05
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-此配置参考用于帮助你管理由 `rancher-cis-benchmark` 应用创建的自定义资源。这些资源用于在集群上执行 CIS 扫描、跳过测试、设置扫描使用的测试配置文件和其他自定义配置。
+此配置参考用于帮助你管理由 `rancher-compliance` 应用创建的自定义资源。这些资源用于在集群上执行 compliance 扫描、跳过测试、设置扫描使用的测试配置文件和其他自定义配置。
 
-要配置自定义资源，转到**集群**仪表板。要配置 CIS 扫描：
+要配置自定义资源，转到**集群**仪表板。要配置 compliance 扫描：
 
 . 在左上角，单击 *☰ > 集群管理*。
-. 在**集群**页面上，转到要配置 CIS 扫描的集群，然后单击 *Explore*。
-. 在左侧导航栏中，单击 *CIS Benchmark*。
+. 在**集群**页面上，转到要配置 compliance 扫描的集群，然后单击 *Explore*。
+. 在左侧导航栏中，单击 *Compliance*。
 
 == 扫描
 
-扫描是用来根据定义的配置文件，在集群上触发 CIS 扫描的。扫描完成后会创建一份报告。
+扫描是用来根据定义的配置文件，在集群上触发 compliance 扫描的。扫描完成后会创建一份报告。
 
 配置扫描时，你需要定义与 `scanProfileName` 参数一起使用的扫描配置文件的名称。
 
@@ -20,7 +20,7 @@
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScan
 metadata:
   name: rke-cis
@@ -30,12 +30,12 @@ spec:
 
 == 配置文件
 
-配置文件包含 CIS 扫描的配置，包括要使用的 Benchmark 测试版本以及要在该 Benchmark 测试中跳过的测试。
+配置文件包含 compliance 扫描的配置，包括要使用的 Benchmark 测试版本以及要在该 Benchmark 测试中跳过的测试。
 
 [CAUTION]
 ====
 
-默认情况下，一些 ClusterScanProfile 会作为 `rancher-cis-benchmark` Chart 的一部分进行安装。如果用户编辑了这些默认 Benchmark 或配置文件，它们会在下一次 Chart 更新时被重置。因此，建议用户不要编辑默认的 ClusterScanProfile。
+默认情况下，一些 ClusterScanProfile 会作为 `rancher-compliance` Chart 的一部分进行安装。如果用户编辑了这些默认 Benchmark 或配置文件，它们会在下一次 Chart 更新时被重置。因此，建议用户不要编辑默认的 ClusterScanProfile。
 ====
 
 
@@ -49,12 +49,12 @@ spec:
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScanProfile
 metadata:
   annotations:
     meta.helm.sh/release-name: clusterscan-operator
-    meta.helm.sh/release-namespace: cis-operator-system
+    meta.helm.sh/release-namespace: compliance-operator-system
   labels:
     app.kubernetes.io/managed-by: Helm
   name: "<example-profile>"
@@ -69,9 +69,9 @@ spec:
 
 Benchmark 版本是指使用 `kube-bench` 运行的 Benchmark 名称，以及该 Benchmark 的有效配置参数。
 
-`ClusterScanBenchmark` 定义了 CIS `BenchmarkVersion` 的名称和测试配置。`BenchmarkVersion` 名称是提供给 `kube-bench` 工具的参数。
+`ClusterScanBenchmark` 定义了 Compliance `BenchmarkVersion` 的名称和测试配置。`BenchmarkVersion` 名称是提供给 `kube-bench` 工具的参数。
 
-默认情况下，一些 `BenchmarkVersion` 名称和测试配置会作为 CIS 扫描应用的一部分进行打包。启用此功能后，这些默认 BenchmarkVersion 将自动安装，用户可以使用它们来创建 ClusterScanProfile。
+默认情况下，一些 `BenchmarkVersion` 名称和测试配置会作为 Compliance 扫描应用的一部分进行打包。启用此功能后，这些默认 BenchmarkVersion 将自动安装，用户可以使用它们来创建 ClusterScanProfile。
 
 [CAUTION]
 ====
@@ -90,12 +90,12 @@ ClusterScanBenchmark 由以下字段组成：
 
 [,yaml]
 ----
-apiVersion: cis.cattle.io/v1
+apiVersion: compliance.cattle.io/v1
 kind: ClusterScanBenchmark
 metadata:
   annotations:
     meta.helm.sh/release-name: clusterscan-operator
-    meta.helm.sh/release-namespace: cis-operator-system
+    meta.helm.sh/release-namespace: compliance-operator-system
   creationTimestamp: "2020-08-28T18:18:07Z"
   generation: 1
   labels:
