--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/how-to.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/how-to.adoc
@@ -1,12 +1,12 @@
-= CIS 扫描指南
-:revdate: 2025-08-26
+= Compliance 扫描指南
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
-* xref:security/cis-scans/install-rancher-cis-benchmark.adoc[安装 Rancher CIS Benchmark]
-* xref:security/cis-scans/uninstall-rancher-cis-benchmark.adoc[卸载 Rancher CIS Benchmark]
-* xref:security/cis-scans/run-a-scan.adoc[运行扫描]
-* xref:security/cis-scans/run-a-scan-periodically-on-a-schedule.adoc[定时运行扫描]
-* xref:security/cis-scans/view-reports.adoc[查看报告]
-* xref:security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc[为 Rancher CIS Benchmark 启用告警]
-* xref:security/cis-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc[为定时扫描配置告警]
-* xref:security/cis-scans/create-a-custom-benchmark-version-to-run.adoc[为集群扫描创建自定义 Benchmark 版本]
+* xref:security/compliance-scans/install-rancher-compliance.adoc[安装 Rancher Compliance]
+* xref:security/compliance-scans/uninstall-rancher-compliance.adoc[卸载 Rancher Compliance]
+* xref:security/compliance-scans/run-a-scan.adoc[运行扫描]
+* xref:security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc[定时运行扫描]
+* xref:security/compliance-scans/view-reports.adoc[查看报告]
+* xref:security/compliance-scans/enable-alerting-for-rancher-compliance.adoc[为 Rancher Compliance 启用告警]
+* xref:security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc[为定时扫描配置告警]
+* xref:security/compliance-scans/create-a-custom-compliance-version-to-run.adoc[为集群扫描创建自定义 Benchmark 版本]
