Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/latest/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -74,7 +74,7 @@ For information on enabling experimental features, refer to xref:rancher-admin/e
 
 | `auditLog.level`
 | 0
-| `int` - set the xref:observability/logging/enable-api-audit-log.adoc[API Audit Log] level. 0 is off. [0-3]
+| `int` - set the xref:observability/logging/enable-api-audit-log.adoc[API Audit Log] level [0-3].
 
 | `auditLog.maxAge`
 | 1
