--- a/versions/latest/modules/zh/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
+++ b/versions/latest/modules/zh/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
@@ -31,7 +31,7 @@ Compliance 应用支持两种类型的告警：
 . 在**集群**页面上，转到要运行 compliance 扫描的集群，然后单击 *Explore*。
 . 点击 *compliance > Scan*。
 . 单击**创建**。
-. 选择集群扫描配置文件。该配置文件确定要使用哪个 compliance 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
+. 选择集群扫描配置文件。该配置文件确定要使用哪个 CIS Benchmark 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
 . 选择**定时运行扫描**的选项。
 . 在**调度**字段中输入有效的 https://en.wikipedia.org/wiki/Cron#CRON_expression[Cron 表达式]。
 . 选中**告警**下告警类型旁边的框。
