--- a/versions/latest/modules/en/pages/security/compliance-scans/run-a-scan.adoc
+++ b/versions/latest/modules/en/pages/security/compliance-scans/run-a-scan.adoc
@@ -17,7 +17,7 @@ To run a scan,
 . On the *Clusters* page, go to the cluster where you want to run a compliance scan and click *Explore*.
 . Click *Compliance > Scan*.
 . Click *Create*.
-. Choose a cluster scan profile. The profile determines which Compliance version will be used and which tests will be performed. If you choose the Default profile, then the Compliance Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
+. Choose a cluster scan profile. The profile determines which CIS Benchmark version will be used and which tests will be performed. If you choose the Default profile, then the Compliance Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
 . Click *Create*.
 
 *Result:* A report is generated with the scan results. To see the results, click the name of the scan that appears.
