--- a/versions/v2.12/modules/en/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/configure-alerts-for-periodic-scan-on-a-schedule.adoc
@@ -31,7 +31,7 @@ To configure alerts for a scan that runs on a schedule,
 . On the *Clusters* page, go to the cluster where you want to run a Compliance scan and click *Explore*.
 . Click *compliance > Scan*.
 . Click *Create*.
-. Choose a cluster scan profile. The profile determines which compliance version will be used and which tests will be performed. If you choose the Default profile, then the Compliance Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
+. Choose a cluster scan profile. The profile determines which CIS Benchmark version will be used and which tests will be performed. If you choose the Default profile, then the Compliance Operator will choose a profile applicable to the type of Kubernetes cluster it is installed on.
 . Choose the option *Run scan on a schedule*.
 . Enter a valid https://en.wikipedia.org/wiki/Cron#CRON_expression[cron schedule expression] in the field *Schedule*.
 . Check the boxes next to the Alert types under *Alerting*.
