--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/run-a-scan-periodically-on-a-schedule.adoc
@@ -8,7 +8,7 @@
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**页面上，转到要运行 Compliance 扫描的集群，然后单击 *Explore*。
 . 点击 *Compliance > Scan*。
-. 选择集群扫描配置文件。该配置文件确定要使用哪个 Compliance 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
+. 选择集群扫描配置文件。该配置文件确定要使用哪个 CIS Benchmark 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
 . 选择**定时运行扫描**的选项。
 . 将一个有效的 https://en.wikipedia.org/wiki/Cron#CRON_expression[Cron 表达式]填写到**调度**字段。
 . 选择一个**保留计数**，表示为这个定时扫描维护的报告数量。默认情况下，此计数为 3。超过此保留限制时，旧报告将被删除。
