--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/run-a-scan.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/run-a-scan.adoc
@@ -18,7 +18,7 @@
 . 在**集群**页面上，转到要运行 Compliance 扫描的集群，然后单击 *Explore*。
 . 点击 *Compliance > Scan*。
 . 单击**创建**。
-. 选择集群扫描配置文件。该配置文件确定要使用哪个 Compliance 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
+. 选择集群扫描配置文件。该配置文件确定要使用哪个 CIS Benchmark 版本以及要执行哪些测试。如果你选择 Default 配置文件，则 Compliance Operator 将选择适用于它所在的 Kubernetes 集群类型的配置文件。
 . 单击**创建**。
 
 *结果*：已生成带有扫描结果的报告。如需查看结果，请单击显示的扫描名称。
