Update revdate / auditLog.level table entry

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -1,5 +1,5 @@
 = {rancher-product-name} Helm Chart Options
-:revdate: 2025-08-25
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 :keywords: ["rancher helm chart", "rancher helm options", "rancher helm chart options", "helm chart rancher", "helm options rancher", "helm chart options rancher"]
 
@@ -74,7 +74,7 @@ For information on enabling experimental features, refer to xref:rancher-admin/e
 
 | `auditLog.level`
 | 0
-| `int` - set the xref:observability/logging/enable-api-audit-log.adoc[API Audit Log] level. 0 is off. [0-3]
+| `int` - set the xref:observability/logging/enable-api-audit-log.adoc[API Audit Log] level. [0-3]
 
 | `auditLog.maxAge`
 | 1
