Sync Community PR #1847 (add new audit log docs) and PR #1948 ([2.12] Add missing flag to enable auditlog) (#405)
* Add missing flag to enable auditlog

* Remove extra column in Advanced Options tables

* Update configure-layer-7-nginx-load-balancer

* Update enable-api-audit-log

* Update user-id-tracking-in-audit-logs

* Update revdate

* Apply suggestions from code review

Co-authored-by: Billy Tat <btat@suse.com>

* Update revdate / auditLog.level table entry

* Add missing checkmark to AUDIT_LEVEL table

---------

Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc
@@ -1,5 +1,5 @@
 = Docker Install with TLS Termination at Layer-7 NGINX Load Balancer
-:revdate: 2024-11-22
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
 For development and testing environments that have a special requirement to terminate TLS/SSL at a load balancer instead of your Rancher Server container, deploy Rancher and configure a load balancer to work with it conjunction.
@@ -201,6 +201,7 @@ For help troubleshooting certificates, see xref:installation-and-upgrade/trouble
 If you want to record all transactions with the Rancher API, enable the xref:observability/logging/enable-api-audit-log.adoc[API Auditing] feature by adding the flags below into your install command.
 
  -e AUDIT_LEVEL=1 \
+ -e AUDIT_LOG_ENABLED=true \
  -e AUDIT_LOG_PATH=/var/log/auditlog/rancher-api-audit.log \
  -e AUDIT_LOG_MAXAGE=20 \
  -e AUDIT_LOG_MAXBACKUP=20 \
