--- a/versions/v2.12/modules/en/pages/about-rancher/concepts.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/concepts.adoc
@@ -6,7 +6,7 @@ This page explains concepts related to Kubernetes that are important for underst
 
 == About Docker
 
-Docker is the container packaging and runtime standard. Developers build container images from Dockerfiles and distribute container images from Docker registries. https://hub.docker.com[Docker Hub] is the most popular public registry. Many organizations also set up private Docker registries. Docker is primarily used to manage containers on individual nodes.
+Docker is a container packaging and runtime standard. Developers can build container images from Dockerfiles and distribute container images from Docker registries. https://hub.docker.com[Docker Hub] is a popular public registry. Many organizations also set up private Docker registries. Docker is primarily used to manage containers on individual nodes.
 
 == About Kubernetes
 
