--- a/versions/v2.12/modules/zh/pages/security/compliance-scans/view-reports.adoc
+++ b/versions/v2.12/modules/zh/pages/security/compliance-scans/view-reports.adoc
@@ -11,3 +11,11 @@
 . **扫描**页面将显示生成的报告。要查看详细报告，请转到扫描报告并单击报告名称。
 
 你可以从扫描列表或扫描详情页面下载报告。
+
+To get the verbose version of the compliance scan results, run the following command on the cluster that was scanned. Note that the scan must be completed before this can be done.
+
+[,shell]
+----
+export REPORT="scan-report-name"
+kubectl get clusterscanreports.compliance.cattle.io $REPORT -o json |jq ".spec.reportJSON | fromjson" | jq -r ".actual_value_map_data" | base64 -d | gunzip | jq .
+----
