--- a/versions/latest/modules/en/pages/about-rancher/concepts.adoc
+++ b/versions/latest/modules/en/pages/about-rancher/concepts.adoc
@@ -1,19 +1,12 @@
 = Kubernetes Concepts
-:revdate: 2024-09-23
+:revdate: 2025-08-27
 :page-revdate: {revdate}
 
 This page explains concepts related to Kubernetes that are important for understanding how Rancher works. The descriptions below provide a simplified overview of Kubernetes components. For more details, refer to the https://kubernetes.io/docs/concepts/overview/components/[official documentation on Kubernetes components.]
 
 == About Docker
 
-Docker is the container packaging and runtime standard. Developers build container images from Dockerfiles and distribute container images from Docker registries. https://hub.docker.com[Docker Hub] is the most popular public registry. Many organizations also set up private Docker registries. Docker is primarily used to manage containers on individual nodes.
-
-[NOTE]
-====
-
-Although Rancher 1.6 supported Docker Swarm clustering technology, it is no longer supported in Rancher 2.x due to the success of Kubernetes.
-====
-
+Docker is a container packaging and runtime standard. Developers can build container images from Dockerfiles and distribute container images from Docker registries. https://hub.docker.com[Docker Hub] is a popular public registry. Many organizations also set up private Docker registries. Docker is primarily used to manage containers on individual nodes.
 
 == About Kubernetes
 
@@ -23,7 +16,7 @@ Kubernetes is the container cluster management standard. YAML files specify cont
 
 A cluster is a group of computers that work together as a single system.
 
-A _Kubernetes Cluster_ is a cluster that uses the https://kubernetes.io/[Kubernetes container-orchestration system] to deploy, maintain, and scale Docker containers, allowing your organization to automate application operations.
+A _Kubernetes Cluster_ is a cluster that uses the https://kubernetes.io/[Kubernetes container-orchestration system] to deploy, maintain, and scale containers, allowing your organization to automate application operations.
 
 == Roles for Nodes in Kubernetes Clusters
 
