Updating rollback.adoc pages after review
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/rollbacks.adoc
@@ -3,7 +3,7 @@
 :page-revdate: {revdate}
 :experimental:
 
-This page outlines how to rollback Rancher to a previous version after an upgrade.
+This page outlines how to roll back Rancher to a previous version after an upgrade.
 
 include::shared:ROOT:partial$en/rollback-warning.adoc[]
 
@@ -19,9 +19,7 @@ Follow the instructions from this page when:
 * If you need to restore Rancher to its previous state at the same Rancher version, see the xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[restore documentation].
 ====
 
-== Rolling Back to Rancher v2.8.0+
-
-To roll back to Rancher v2.8.0+, use the *Rancher Backups* application and restore Rancher from backup.
+To roll back Rancher to a lower/previous version, use the *Rancher Backups* application and restore Rancher from backup.
 
 Rancher has to be started with the lower/previous version after a rollback.
 
