--- a/versions/v2.10/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/v2.10/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
@@ -5,11 +5,7 @@
 
 本页概述了如何在升级 Rancher 后将 Rancher 回滚到之前的版本。
 
-[WARNING]
-====
-* This is only possible by restoring to a previous version from a backup instance. Changing versions using  kubectl or Helm is not supported.
-* When rolling back, ensure the version being restored is under active support. Rolling back to versions that are end-of-life is not supported.
-====
+include::shared:ROOT:partial$zh/rollback-warning.adoc[]
 
 请在以下情况时按照本页的说明进行操作：
 
@@ -23,9 +19,7 @@
 * 如果你需要还原 Rancher 到同一版本的之前的状态, 请参阅xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[还原 Rancher].
 ====
 
-== 回滚到 Rancher 2.8.0+
-
-要回滚到 Rancher 2.8.0+，使用 **Rancher 备份**应用并通过备份来恢复 Rancher。
+To roll back Rancher to a lower/previous version, use the *Rancher Backups* application and restore Rancher from backup.
 
 回滚后，Rancher 必须以较低/较早的版本启动。
 
