--- a/versions/latest/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
@@ -19,9 +19,7 @@ include::shared:ROOT:partial$zh/rollback-warning.adoc[]
 * 如果你需要还原 Rancher 到同一版本的之前的状态, 请参阅xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc[还原 Rancher].
 ====
 
-== 回滚到 Rancher 2.8.0+
-
-要回滚到 Rancher 2.8.0+，使用 **Rancher 备份**应用并通过备份来恢复 Rancher。
+To roll back Rancher to a lower/previous version, use the *Rancher Backups* application and restore Rancher from backup.
 
 回滚后，Rancher 必须以较低/较早的版本启动。
 
