--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/authn-and-authz.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/authn-and-authz.adoc
@@ -1,5 +1,5 @@
 = Configuring Authentication
-:revdate: 2025-03-04
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 :weight: 10
 
@@ -89,13 +89,11 @@ To set the Rancher access level for users in the authorization service, follow t
 [NOTE]
 .SAML Provider Caveats:
 ====
-
 * SAML Protocol does not support search or lookup for users or groups. Therefore, there is no validation on users or groups when adding them to Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. If you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of. 
 ====
-
 
 == External Authentication Configuration and Principal Users
 
