--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
@@ -2,7 +2,7 @@
 :revdate: 2024-09-23
 :page-revdate: {revdate}
 
-If your organization uses Microsoft Active Directory Federation Services (AD FS) for user authentication, you can configure Rancher to allow your users to log in using their AD FS credentials.
+If your organization uses Microsoft Active Directory Federation Services (ADFS) for user authentication, you can configure Rancher to allow your users to log in using their AD FS credentials.
 
 == Prerequisites
 
@@ -26,11 +26,12 @@ Setting up Microsoft AD FS with Rancher Server requires configuring AD FS on you
 [NOTE]
 .SAML Provider Caveats:
 ====
+If you configure ADFS without OpenLDAP, you won't be able to search for or directly lookup users or groups. This brings several caveats:
 
-* SAML Protocol does not support search or lookup for users or groups. Therefore, there is no validation on users or groups when adding them to Rancher.
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. If you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
 
 
