--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/shibboleth-saml/shibboleth-saml.adoc
@@ -50,25 +50,25 @@ You can generate one using an openssl command. For example:
 +
 Rancher redirects you to the IdP login page. Enter credentials that authenticate with Shibboleth IdP to validate your Rancher Shibboleth configuration.
 +
-
 [NOTE]
 ====
 You may have to disable your popup blocker to see the IdP login page.
 ====
 
-
 *Result:* Rancher is configured to work with Shibboleth. Your users can now sign into Rancher using their Shibboleth logins.
 
-=== SAML Provider Caveats
-
+[NOTE]
+.SAML Provider Caveats
+====
 If you configure Shibboleth without OpenLDAP, the following caveats apply due to the fact that SAML Protocol does not support search or lookup for users or groups.
 
 * There is no validation on users or groups when assigning permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. UID Field) must be entered correctly. As you type the user ID, there will be no search for other user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. If you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 
 To enable searching for groups when assigning permissions in Rancher, you will need to configure a back end for the SAML provider that supports groups, such as OpenLDAP.
+====
 
 === CNI Community Popularity
 
