--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-pingidentity.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-pingidentity.adoc
@@ -49,7 +49,7 @@ You may have to disable your popup blocker to see the IdP login page.
 *Result:* Rancher is configured to work with PingIdentity. Your users can now sign into Rancher using their PingIdentity logins.
 
 [NOTE]
-.SAML Provider Caveats:
+.SAML Provider Caveats
 ====
 If you configure Ping without OpenLDAP, you won't be able to search for or directly lookup users or groups. This brings several caveats:
 
