--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
@@ -149,14 +149,14 @@ You may have to disable your popup blocker to see the IdP login page.
 *Result:* Rancher is configured to work with Keycloak. Your users can now sign into Rancher using their Keycloak logins.
 
 [NOTE]
-.SAML Provider Caveats:
+.SAML Provider Caveats
 ====
 If you configure Keycloak without OpenLDAP, you won't be able to search for or directly lookup users or groups. This brings several caveats:
 
 * Users and groups aren't validated when you assign permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. If you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
 
 == Configuration Reference
