--- a/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
+++ b/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
@@ -4,6 +4,8 @@
 :page-revdate: {revdate}
 :experimental:
 
+include::shared:ROOT:partial$en/permissions-warning.adoc[]
+
 _Permissions_ are individual access rights that you can assign when selecting a custom permission for a user.
 
 Global Permissions define user authorization outside the scope of any particular cluster. Out-of-the-box, there are four default global permissions: `Administrator`, `Standard User` and `User-base`.
