--- a/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
@@ -4,6 +4,8 @@
 :page-revdate: {revdate}
 :experimental:
 
+include::shared:ROOT:partial$zh/permissions-warning.adoc[]
+
 _权限_ 是你在为用户选择自定义权限时可以分配的个人访问权限。
 
 全局权限定义用户在任何特定集群之外的授权。Rancher 提供四种开箱即用的默认全局权限：`Administrator` (管理员)、`Restricted Admin` (受限管理员)、`Standard User` (标准用户) 和 `User-Base` 用户。
