Update v2.12.2 Maintenance Tasks

--- a/versions/latest/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/latest/modules/en/pages/faq/deprecated-features.adoc
@@ -1,6 +1,6 @@
 = Deprecated Features in {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-06-23
+:revdate: 2025-09-24
 :page-revdate: {revdate}
 
 == What is Rancher's deprecation policy?
@@ -13,6 +13,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 
 |===
 | Patch Version | Release Date
+
+| https://github.com/rancher/rancher/releases/tag/v2.12.2[2.12.2]
+| Sep 24, 2025
 
 | https://github.com/rancher/rancher/releases/tag/v2.12.1[2.12.1]
 | Aug 28, 2025
