--- a/versions/latest/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/latest/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -1,6 +1,6 @@
 = {rancher-product-name} Webhook
 :page-languages: [en, zh]
-:revdate: 2025-06-23
+:revdate: 2025-09-24
 :page-revdate: {revdate}
 
 Rancher-Webhook is an essential component of Rancher that works in conjunction with Kubernetes to enhance security and enable critical features for Rancher-managed clusters.
@@ -17,6 +17,11 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
+
+| v2.12.2
+| v0.8.2
+| &check;
+| &check;
 
 | v2.12.1
 | v0.8.1
