--- a/versions/latest/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/rollbacks.adoc
@@ -35,7 +35,7 @@ To roll back Rancher to a lower/previous version, use the *Rancher Backups* appl
 ====
 
 
-=== 步骤 1 ：创建 Restore 自定义资源
+== 步骤 1 ：创建 Restore 自定义资源
 
 . 点击 *☰ > 集群管理*。
 . 找到你的本地集群，并点击 *Explore*。
@@ -88,7 +88,7 @@ kubectl get pods -n cattle-resources-system
 kubectl logs -n cattle-resources-system -f
 ----
 
-=== 步骤 2：回滚到上一个 Rancher 版本
+== 步骤 2：回滚到上一个 Rancher 版本
 
 你可以使用 Helm CLI 回滚 Rancher。要回滚到上一个版本：
 
