--- a/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/gce/machine-configuration.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/gce/machine-configuration.adoc
@@ -5,6 +5,8 @@
 
 For more information about Google Cloud Platform (GCP) and the Google Compute Engine (GCE), refer to the official https://cloud.google.com/docs[GCP documentation].
 
+== Basic Options
+
 === Zone
 
 The GCP Region and Zone that the VM will be deployed to. For example, `us-east1-b`.
